Update logo and banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         <div class="header">
-            <img src="https://github.com/adrianhajdin/project_fitness_app/blob/main/src/assets/images/Logo.png?raw=true" alt="Logo">
+            <img src="/assets/images/logo.png" alt="Logo">
 
             <nav>
                 <ul>
@@ -33,7 +33,7 @@
 
             <div class="box">
 
-                <img src="https://github.com/adrianhajdin/project_fitness_app/blob/main/src/assets/images/banner.png?raw=true" alt="Banner">
+                <img src="/assets/images/banner.png" alt="Banner">
 
                 <div class="content">
                     <p class="text-red">Fitness Club</p>
